manifest/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: realtimeapp
  labels:
    app: realtime
spec:
  selector:
    matchLabels:
      app: realtime
  replicas: 3
  template:
    metadata:
      labels:
        app: realtime
    spec:
      containers:
      - name: realtimeapp
        image: argoproj/rollouts-demo:yellow
        ports:
        - containerPort: 8080
  strategy:
    blueGreen:
      activeService: realtimeapp-active
      previewService: realtimeapp-preview
      previewReplicaCount: 2
      scaleDownDelayRevisionLimit: 0
      prePromotionAnalysis:
        templates:
        - templateName: realtime-analysis
        args:
        - name: service-name
          value: realtimeapp-preview.default.svc.cluster.local
