manifest/realtime.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: realtimeapp-active
  labels:
    app: realtime
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: realtime
---
apiVersion: v1
kind: Service
metadata:
  name: realtimeapp-preview
  labels:
    app: realtime
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: realtime
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtimeapp-ingress
spec:
  rules:
  - host: real.baeke.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realtimeapp-active
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtimeapp-ingress-preview
spec:
  rules:
  - host: real.baeke.info.preview
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realtimeapp-preview
            port:
              number: 80
